--- a/JsonParsing/MainWindow.xaml
+++ b/JsonParsing/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Button Width="350" Height="100" Content="Post" FontSize="50" Click="Button_Click"/>
     </Grid>
 </Window>
